[package]
name = "ruster_unsafe_demo"
version = "0.0.1"
authors = ["Daniel Goertzen <daniel.goertzen@gmail.com>"]

[lib]
name = "ruster_unsafe_demo"
crate-type = ["dylib"]

[dependencies.ruster_unsafe]
git = "https://github.com/tatsuya6502/ruster_unsafe/"
rev = "nif-2.9"

[dependencies]
libc = ">=0.1"
